--- a/.github/workflows/push_bundle_master.yaml
+++ b/.github/workflows/push_bundle_master.yaml
@@ -23,7 +23,7 @@ jobs:
 
     - uses: actions/checkout@v3
       with:
-        ref: master
+        ref: main
         token: ${{ steps.get_installation_token.outputs.token }}
 
     - uses: actions/setup-node@v3
@@ -40,7 +40,7 @@ jobs:
         git add assets
         git diff --staged --quiet && (echo "bundled=false" >> $GITHUB_OUTPUT) || (echo "bundled=true" >> $GITHUB_OUTPUT)
 
-    - name: Push to master
+    - name: Push to main
       if: steps.bundle.outputs.bundled == 'true'
       run: |
         git config user.name vil-github-app
