--- a/.github/workflows/version_Check.yaml
+++ b/.github/workflows/version_Check.yaml
@@ -3,7 +3,7 @@ name: Package Version Check
 on:
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   packageVersionCheck:
@@ -19,7 +19,7 @@ jobs:
 
     - uses: actions/checkout@v3
       with:
-        ref: master
+        ref: main
 
     - name: Get package json of main
       id: mainPackageJson
